--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -100,4 +100,9 @@
         "/home/llw/catkin_ws/devel/lib/python2.7/dist-packages",
         "/opt/ros/melodic/lib/python2.7/dist-packages"
     ],
+    "[erb]": {
+        "editor.defaultFormatter": "aliariff.vscode-erb-beautify",
+        "editor.formatOnSave": true,
+      },
+
 }
